@@ -91,6 +91,7 @@ Quality of Life (QoL):
  - Re-Allowed Naval Engine Modules refitting, previously soft-blocked
  - Reshuffled and rebalanced admiral traits
  - Scrollbar for bookmarks, news events and focus descriptions, now you can have long text without any problems, also scrollbar should fix problem with long textes in other languages and invisible button in news events.
+ - No slowdown mode now integrated in Millennium Dawn with small changes
 
 v1.7 - Make Millennium Dawn Great Again
 
